Updating theme sidebar to include prior doc versions, adding Google Analytics code to footer

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,6 +13,10 @@ theme:
 
 copyright: Copyright &copy; 2018 Delphix Corp.
 
+google_analytics:
+  - 'UA-35429885-3'
+  - 'auto'
+
 extra:
   social:
     - type: sitemap
