--- a/.hooksconfig
+++ b/.hooksconfig
@@ -11,6 +11,9 @@
     gate-release-check = skip
     codename = Lumen
     gate-allowed-issuetypes = 1,3,4,5,10000,10400
+ [branch "5.3/patch"]
+    gate-allowed-issuetypes = 10405
+    gate-release = 5.3.0.3
  [branch "5.3/release"]
     gate-allowed-issuetypes = 10405
     gate-release = 5.3.0.3
