--- a/.hooksconfig
+++ b/.hooksconfig
@@ -9,6 +9,7 @@
     nreviews = 1
  [branch "master"]
     gate-release = Lumen
+    gate-is-major-release = true
     gate-release-check = skip
     codename = Lumen
     gate-allowed-issuetypes = 1,3,4,5,10000,10400
