--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: Delphix Masking 5.3.7
+site_name: Delphix Masking 5.3.8
 
 theme:
   name: material
@@ -12,7 +12,7 @@ theme:
     text: Helvetica Neue
     code: Consolas
 
-copyright: Copyright &copy; 2019 Delphix Corp.
+copyright: Copyright &copy; 2019, 2020 Delphix Corp.
 
 google_analytics:
   - 'UA-35429885-3'
