--- a/.hooksconfig
+++ b/.hooksconfig
@@ -6,7 +6,7 @@
     slack-color = ff00ff
     slack-notify = docs-pushes
     approvers = gatekeepers-docs
-    nreviews = 1
+    nreviewers = 1
  [branch "master"]
     gate-is-major-release = true
     gate-allowed-issuetypes = 1,3,4,5,10000,10400
