--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,6 @@
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/5.3.8/"
+  from = "/5.3.8"
   to = "https://dlpx-5-3-8--clever-lumiere-c80098.netlify.com/"
   status = 301
   force = true
+  query = {path = ":path"}
