--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,7 @@ mkdocs = "*"
 mkdocs-material = "*"
 markdown-include = "*"
 mkdocs-awesome-pages-plugin = "*"
+jinja2 == "10.2.3"
 
 [requires]
 python_version = "3.7"
