--- a/Pipfile
+++ b/Pipfile
@@ -5,7 +5,7 @@ name = "pypi"
 
 [packages]
 mkdocs = "*"
-mkdocs-material = "*"
+mkdocs-material = "~=4.6"
 markdown-include = "*"
 mkdocs-awesome-pages-plugin = "*"
 
