--- a/Pipfile
+++ b/Pipfile
@@ -4,7 +4,7 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
-mkdocs = "*"
+mkdocs = "~=1.0"
 mkdocs-material = "~=4.6"
 markdown-include = "*"
 mkdocs-awesome-pages-plugin = "*"
