--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/5.3.8/"
-  to = "https://dlpx-5-3-8--clever-lumiere-c80098.netlify.com/"
+  from = "https://https://5e95e96fca6adb00076eb2a0--clever-lumiere-c80098.netlify.com/.netlify.com/5.3.8/"
+  to = "https://5e95e9fb1b0990000686fdfd--clever-lumiere-c80098.netlify.com/"
   status = 200
   force = true
