--- a/netlify.toml
+++ b/netlify.toml
@@ -3,3 +3,9 @@
   to = "https://dlpx-5-3-8--clever-lumiere-c80098.netlify.com/:splat"
   status = 200
   force = true
+
+[[redirects]]
+  from = "https://maskdocdev.delphix.com/5.3.8/*"
+  to = "https://dlpx-5-3-8--clever-lumiere-c80098.netlify.com/:splat"
+  status = 200
+  force = true
