--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/*"
-  to = "https://dlpx-6-0-1-0--clever-lumiere-c80098.netlify.com/:splat"
+  from = "https://clever-lumiere-c80098.netlify.app/*"
+  to = "https://dlpx-6-0-1-0--clever-lumiere-c80098.netlify.app/:splat"
   status = 200
   force = true
