--- a/netlify.toml
+++ b/netlify.toml
@@ -1,17 +1,17 @@
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/5.3.8/*"
+  from = "/5.3.8/*"
   to = "https://dlpx-5-3-8--clever-lumiere-c80098.netlify.app/:splat"
   status = 200
   force = true
   
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/5.3.9/*"
+  from = "/5.3.9/*"
   to = "https://dlpx-5-3-9--clever-lumiere-c80098.netlify.app/:splat"
   status = 200
   force = true
   
 [[redirects]]
-  from = "https://clever-lumiere-c80098.netlify.com/6.0.2/*"
+  from = "/6.0.2/*"
   to = "https://dlpx-6-0-2-0--clever-lumiere-c80098.netlify.app/:splat"
   status = 200
   force = true
